# wtcc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/skills/issue/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  verify-aur.yml
docs/: handoff-2026-06-29.md
docs/adr/: 0001-tui-pty-terminal-backend.md
docs/demo/: capture.sh
docs/superpowers/specs/: 2026-06-22-wtcc-tui-design.md
docs/testing/: smoke-test.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
scripts/: smoke-test.sh
src/: app.rs  config.rs  event.rs  keymap.rs  layout.rs  lib.rs  main.rs  pr.rs  repository.rs  session.rs  theme.rs  vcs.rs  worktree.rs
src/ui/: mod.rs  palette.rs  sidebar.rs  statusbar.rs
tests/: agent_presets.rs  archive_worktree.rs  badge_severity.rs  copy_on_create.rs  keymap.rs  lifecycle_scripts.rs  pr_actions.rs  remove_worktree.rs  rename_branch.rs  repository_registration.rs  run_script.rs  tabs.rs  theme.rs  ui_theme.rs  worktree.rs
