[package]
name = "wtcc"
version = "0.1.0"
edition = "2024"
description = "WorkTree Command Center — a TUI for running Claude Code agents across git worktrees"
license = "MIT"
repository = "https://github.com/isorensen/wtcc"
readme = "README.md"
keywords = ["tui", "git", "worktree", "claude", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wtcc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.28.1"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
portable-pty = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tui-term = "0.3.0"
vt100 = "0.15.2"

[dev-dependencies]
tempfile = "3.27.0"
