[package]
name = "wtcc"
version = "0.8.2"
edition = "2024"
description = "WorkTree Command Center — a TUI for running Claude Code agents across git worktrees"
license = "MIT"
repository = "https://github.com/isorensen/wtcc"
readme = "README.md"
keywords = ["tui", "git", "worktree", "claude", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wtcc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
tui-term = "0.3.4"
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3.27.0"
